--- a/src/main/resources/com/example/practice/manager_dashboard.fxml
+++ b/src/main/resources/com/example/practice/manager_dashboard.fxml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
 
-<VBox prefHeight="300" prefWidth="400" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practice.ManagerDashboardController">
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.example.practice.EmployeeDashboardController">
 
-    <Label text="Manager Dashboard" />
+    <center>
+        <VBox spacing="10" alignment="CENTER">
+            <Button text="View Total Earnings" onAction="#calculateEarnings"/>
+            <Button text="View Payment History" onAction="#handleViewSalaryButtonAction"/>
+            <Button text="Search User by ID" onAction="#searchUserById"/>
+            <Button text="Search User by Salary Type" onAction="#searchUserBySalaryType"/>
+            <Button text="Show All Employees" onAction="#showAllEmployees"/>
+            <Button text="Show All Managers" onAction="#showAllManagers"/>
+            <Button text="Update Profile" onAction="#updateProfile"/>
+            <Button text="Log Out" onAction="#handleLogoutButtonAction"/>
+        </VBox>
+    </center>
 
-    <HBox>
-        <Button fx:id="calculateEarnings" onAction="#calculateEarnings" text="View Total Earnings by ID" />
-        <Button fx:id="viewPaymentHistory" onAction="#viewPaymentHistory" text="View Payment History" />
-        <Button fx:id="searchUserById" onAction="#searchUserById" text="Search User by ID" />
-    </HBox>
-
-    <HBox>
-        <Button fx:id="searchUserBySalaryType" onAction="#searchUserBySalaryType" text="Search User by Salary Type" />
-        <Button fx:id="archiveUser" onAction="#archiveUser" text="Archive User" />
-        <Button fx:id="changeSalary" onAction="#changeSalary" text="Change Salary" />
-    </HBox>
-
-    <HBox>
-        <Button fx:id="showAllEmployees" onAction="#showAllEmployees" text="Show All Employees" />
-        <Button fx:id="showAllManagers" onAction="#showAllManagers" text="Show All Managers" />
-        <Button fx:id="updateProfile" onAction="#updateProfile" text="Update Profile" />
-    </HBox>
-    <Button fx:id="logOut" onAction="#handleLogoutButtonAction" text="Log Out" />
-</VBox>
+</BorderPane>
