--- a/src/main/resources/com/example/practice/manager_dashboard.fxml
+++ b/src/main/resources/com/example/practice/manager_dashboard.fxml
@@ -54,6 +54,11 @@
                     <Button text="Update Profile" onAction="#handleUpdateProfile"/>
                     <Button text="Archive User" onAction="#handleArchiveUser"/>
                     <Button text="Change Salary" onAction="#handleChangeSalary"/>
+                    <Button text="View All Departments" onAction="#handleViewAllDepartments"/>
+                    <Button text="UnArchive User" onAction="#handleUnarchiveUser"/>
+                    <Button text="show all archive employee" onAction="#handleViewAllArchivedEmployees"/>
+                    <Button text="Log out" onAction="#handleLogout"/>
+
                 </VBox>
                 <VBox>
                     <Label text="Result:" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
